# Prompt-Optimization-Studio

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  package-lock.json  pyproject.toml  方案.md
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260517_0001_initial_schema.py
backend/: README.md  __init__.py  cli.py  main.py
backend/api/: __init__.py  dependencies.py  router.py
backend/api/routes/: __init__.py  artifacts.py  custom_task_templates.py  datasets.py  evaluations.py  jobs.py  optimization_runs.py  projects.py  prompts.py  run_logs.py
backend/core/: __init__.py  config.py  constants.py  exceptions.py  runtime.py
backend/db/: __init__.py  base.py  session.py
backend/models/: __init__.py  artifact.py  custom_task_template.py  dataset.py  evaluation.py  job.py  mixins.py  optimization_run.py  project.py  prompt.py  run_log.py
backend/prompt_optimization_studio/: cli.py  main.py
backend/prompt_optimization_studio/api/: dependencies.py  router.py
backend/prompt_optimization_studio/core/: __init__.py  config.py  constants.py  exceptions.py  runtime.py
backend/prompt_optimization_studio/db/: session.py
backend/prompt_optimization_studio/models/: __init__.py  artifact.py  dataset.py  evaluation.py  job.py  optimization_run.py  project.py  prompt.py  run_log.py
backend/prompt_optimization_studio/schemas/: artifact.py  common.py  dataset.py  evaluation.py  job.py  optimization.py  project.py  prompt.py  run_log.py
backend/schemas/: __init__.py  artifact.py  common.py  custom_task_template.py  custom_task_template_generation.py  dataset.py  evaluation.py  job.py  optimization.py  project.py  prompt.py  run_log.py
backend/services/: __init__.py  artifact_service.py  custom_task_template_generator.py  dataset_generation.py  dataset_service.py  dspy_program_factory.py  dspy_runtime.py  evaluation_service.py  job_service.py  metric_factory.py  openai_client.py  optimization_service.py  report_summary.py  run_defaults.py  runtime_service.py  task_catalog.py  validators.py
backend/workers/: __init__.py  job_router.py  worker.py
docs/: 当前项目提示词清单与作用说明.md  自定义任务模板字段详细说明.md  项目架构与功能设计详解.md  项目问题与DSPy集成修复方案.md  项目问题与DSPy集成审查报告.md
frontend/: .env.example  README.md  negotiator.d.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  home-page.tsx  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  data-table.tsx  json-view.tsx  panel.tsx  status-chip.tsx  workspace-picker.tsx
frontend/lib/: api.ts  studio.ts  use-studio-workspace.ts
tests/: test_cli_entrypoint.py  test_contracts_and_program_factory.py  test_dataset_generation_and_split.py  test_static_mount.py
(+58 files in other folders)
