[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimization-studio"
version = "0.1.0"
description = "Local Prompt Optimization Studio backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "dspy>=3.1.3",
  "fastapi>=0.116.0",
  "openai>=1.82.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
]

[project.scripts]
studio-api = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "alembic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # ruff-specific rules
]

ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function-call-in-default-argument (FastAPI Depends pattern)
  "RUF001", # allow Chinese full-width punctuation in strings
  "RUF002", # allow Chinese full-width punctuation in docstrings
  "RUF003", # allow Chinese full-width punctuation in comments
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["RUF012"]
"tests/*.py" = ["E402"]
